--- a/app/src/main/res/layout/layout_account_item.xml
+++ b/app/src/main/res/layout/layout_account_item.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="4dp"
-    android:background="@android:color/white"
-    android:layout_marginTop="@dimen/activity_margin"
-    android:layout_marginBottom="@dimen/activity_margin"
     android:layout_marginLeft="@dimen/activity_margin"
+    android:layout_marginStart="@dimen/activity_margin"
     android:layout_marginRight="@dimen/activity_margin"
+    android:layout_marginEnd="@dimen/activity_margin"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <RelativeLayout
+        android:id="@+id/account_item_layout"
         android:orientation="vertical"
-        android:layout_marginLeft="@dimen/activity_margin"
-        android:layout_marginStart="@dimen/activity_margin"
-        android:layout_marginRight="@dimen/activity_margin"
-        android:layout_marginEnd="@dimen/activity_margin"
+        android:background="@drawable/account_rect_border_six"
         android:layout_width="match_parent"
         android:layout_height="72dp">
 
         <TextView
+            android:layout_marginLeft="@dimen/activity_margin"
+            android:layout_marginStart="@dimen/activity_margin"
             android:id="@+id/account_image_title"
             android:background="@drawable/date_flag_circle"
             android:text="现"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
             android:layout_centerVertical="true"
             android:gravity="center"
             android:layout_width="48dp"
@@ -39,16 +39,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/account_name"
                 android:text="现金"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/account_desc"
+                android:layout_marginTop="4dp"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
                 android:text="现金余额"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
         <TextView
+            android:id="@+id/account_amount"
+            android:layout_marginEnd="@dimen/activity_margin"
+            android:layout_marginRight="@dimen/activity_margin"
+            android:textColor="@android:color/white"
+            android:textSize="24sp"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
@@ -57,4 +69,5 @@
             android:layout_height="wrap_content" />
     </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
+
