--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,19 +8,26 @@
     tools:context=".MainActivity">
 
 
-   <FrameLayout
-       android:id="@+id/home_container"
+   <android.support.v4.view.ViewPager
+       android:id="@+id/home_view_pager"
        android:layout_width="match_parent"
-       android:layout_weight="1"
-       android:layout_height="0dp"/>
+       android:layout_height="0dp"
+       android:layout_weight="1"/>
 
-   <android.support.design.widget.BottomNavigationView
-       android:id="@+id/home_bottom_menu"
-       app:menu="@menu/home_bottom_menu"
-       app:elevation="4dp"
-       android:layout_gravity="bottom"
-       android:background="?android:attr/windowBackground"
-       app:itemTextColor="@android:color/holo_blue_dark"
+   <android.support.design.widget.TabLayout
+       android:id="@+id/home_tabLayout"
+       app:tabIndicatorHeight="0dp"
+       android:background="#f00"
        android:layout_width="match_parent"
-       android:layout_height="?attr/actionBarSize"/>
+       android:layout_height="?attr/actionBarSize">
+      <android.support.design.widget.TabItem
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
+      <android.support.design.widget.TabItem
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
+      <android.support.design.widget.TabItem
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
+   </android.support.design.widget.TabLayout>
 </LinearLayout>
