--- a/app/src/main/res/layout/layout_account_item.xml
+++ b/app/src/main/res/layout/layout_account_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginLeft="@dimen/activity_margin"
-    android:layout_marginStart="@dimen/activity_margin"
-    android:layout_marginRight="@dimen/activity_margin"
-    android:layout_marginEnd="@dimen/activity_margin"
+    app:cardElevation="@dimen/border_radius"
+    app:cardCornerRadius="@dimen/border_radius"
+    app:cardMaxElevation="8dp"
+    app:cardUseCompatPadding="true"
+    app:cardPreventCornerOverlap="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -14,14 +15,13 @@
         android:orientation="vertical"
         android:background="@drawable/account_rect_border_six"
         android:layout_width="match_parent"
-        android:layout_height="72dp">
+        android:layout_height="108dp">
 
         <TextView
             android:layout_marginLeft="@dimen/activity_margin"
             android:layout_marginStart="@dimen/activity_margin"
             android:id="@+id/account_image_title"
-            android:background="@drawable/date_flag_circle"
-            android:text="现"
+            android:background="@drawable/account_flag_circle"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:layout_centerVertical="true"
@@ -40,7 +40,6 @@
             android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/account_name"
-                android:text="现金"
                 android:textSize="18sp"
                 android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
@@ -49,7 +48,7 @@
                 android:id="@+id/account_desc"
                 android:layout_marginTop="4dp"
                 android:textColor="@android:color/white"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:text="现金余额"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -69,5 +68,5 @@
             android:layout_height="wrap_content" />
     </RelativeLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
 
