--- a/app/src/main/res/layout/activity_question_feed_back.xml
+++ b/app/src/main/res/layout/activity_question_feed_back.xml
@@ -4,35 +4,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="#eeeeee"
+    android:background="@color/toolbarColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
-        android:background="@color/colorPrimary"
+    <TextView
+        android:id="@+id/question_feedback_back"
+        android:drawableLeft="@drawable/title_back_selector"
+        android:drawableStart="@drawable/title_back_selector"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize">
-        <ImageView
-            android:id="@+id/question_feedback_back"
-            android:background="?selectableItemBackground"
-            android:layout_width="?actionBarSize"
-            android:layout_height="?actionBarSize"
-            android:paddingTop="@dimen/activity_margin"
-            android:paddingBottom="@dimen/activity_margin" />
-        <TextView
-            android:text="@string/question_feed_back"
-            android:textColor="@android:color/white"
-            android:layout_centerInParent="true"
-            android:textSize="@dimen/xx_normal_size"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </RelativeLayout>
-
+        android:layout_height="?attr/actionBarSize"
+        android:gravity="center_vertical"
+        android:drawablePadding="@dimen/activity_margin"
+        android:paddingLeft="@dimen/activity_margin"
+        android:paddingStart="@dimen/activity_margin"
+        android:paddingRight="@dimen/activity_margin"
+        android:paddingEnd="@dimen/activity_margin"
+        android:text="问题反馈"
+        android:textSize="20sp"
+        android:textColor="@color/toolbarTextColor"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="@color/lineDividerColor"/>
     <EditText
         android:id="@+id/feedback_content"
         android:background="@drawable/edittext_rect_border"
         android:padding="@dimen/text_padding"
         android:gravity="top"
-        android:textSize="@dimen/s_normal_size"
+        android:textSize="16sp"
         android:hint="@string/question_feed_back_hint"
         android:layout_marginTop="@dimen/activity_margin"
         android:layout_marginEnd="@dimen/activity_margin"
@@ -40,13 +39,16 @@
         android:layout_width="match_parent"
         android:layout_height="180dp"/>
 
-    <Button
+    <TextView
         android:id="@+id/commit_feedback"
         android:layout_margin="@dimen/activity_margin"
+        android:background="@drawable/number_key_confirm_selector"
         android:text="@string/commit_feedback"
+        android:textSize="18sp"
+        android:gravity="center"
         android:textColor="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="?attr/actionBarSize"/>
 
     <TextView
         android:gravity="center"
