--- a/app/src/main/res/layout/activity_type_manager.xml
+++ b/app/src/main/res/layout/activity_type_manager.xml
@@ -4,33 +4,28 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/toolbarColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:background="@color/colorPrimary"
-        android:orientation="horizontal"
+    <TextView
+        android:id="@+id/type_manager_title"
+        android:drawableLeft="@drawable/title_back_selector"
+        android:drawableStart="@drawable/title_back_selector"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize">
-
-        <ImageView
-            android:id="@+id/type_manager_back"
-            android:background="?selectableItemBackground"
-            android:padding="@dimen/activity_margin"
-            android:layout_gravity="center_vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/type_manager_title"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/xx_normal_size"
-            android:text=""
-            android:layout_gravity="center_vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
+        android:layout_height="?attr/actionBarSize"
+        android:gravity="center_vertical"
+        android:drawablePadding="@dimen/activity_margin"
+        android:paddingLeft="@dimen/activity_margin"
+        android:paddingStart="@dimen/activity_margin"
+        android:paddingRight="@dimen/activity_margin"
+        android:paddingEnd="@dimen/activity_margin"
+        android:textSize="20sp"
+        android:textColor="@color/toolbarTextColor"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="@color/lineDividerColor"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/type_manager_recycler"
